Fix to sidebar falling off screen'

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -100,7 +100,7 @@ p {
 	color: black;
 	font-size: 1.1em;
 	list-style: none;
-	margin-left: -50px;
+	margin-left: 0px;
 	padding-top: 15px;
 	ul {
 		list-style: none;
